--- a/assets/config/dogcom.example.conf
+++ b/assets/config/dogcom.example.conf
@@ -5,8 +5,8 @@ CONTROLCHECKSTATUS = '\x20'
 ADAPTERNUM = '\x03'
 host_ip = ''
 IPDOG = '\x01'
-host_name = 'PC'
-PRIMARY_DNS = '10.10.10.10'
+host_name = 'LIYUANYUAN'
+PRIMARY_DNS = '223.5.5.5'
 dhcp_server = '0.0.0.0'
 AUTH_VERSION = '\x68\x00'
 mac =
